RESOLVED FIXED186066
Printing does not apply the right styles
https://bugs.webkit.org/show_bug.cgi?id=186066
Summary Printing does not apply the right styles
Timothy Hatcher
Reported 2018-05-29 15:19:32 PDT
Attachments
Patch (3.92 KB, patch)
2018-05-29 15:22 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2018-05-29 15:22:37 PDT
Megan Gardner
Comment 2 2018-05-29 15:46:22 PDT
Comment on attachment 341526 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=341526&action=review R=me, except that I can't actually r+ ;) > Source/WebCore/ChangeLog:18 > + (WebCore::Page::defaultAppearance const): Deleted. Nit, "Deleted implementation" makes more sense to me.
WebKit Commit Bot
Comment 3 2018-05-29 16:41:45 PDT
Comment on attachment 341526 [details] Patch Clearing flags on attachment: 341526 Committed r232278: <https://trac.webkit.org/changeset/232278>
WebKit Commit Bot
Comment 4 2018-05-29 16:41:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.